debug form submission, simplify survey model

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,7 +1,7 @@
 Development
 -----------
 x validate in js
-- debug form submission
+x debug form submission
 - check if easy to extract data after (make admin page that just shows json of all data?)
 - style bad ui
 - template good ui
