--- a/TODO.txt
+++ b/TODO.txt
@@ -6,6 +6,7 @@ x check if easy to extract data after (make admin page that just shows json of a
 - style bad ui
 - template good ui
 - style good ui
+- add more memes
 
 Production
 ----------
