--- a/TODO.txt
+++ b/TODO.txt
@@ -3,7 +3,7 @@ Development
 x validate in js
 x debug form submission
 x check if easy to extract data after (make admin page that just shows json of all data?)
-- style bad ui
+x style bad ui
 - template good ui
 - style good ui
 - add more memes
